# MidTerm2024ComputerNetwowrk

./: .gitignore  CMakeLists.txt  README.MD
ClientProg/: CMakeLists.txt
ClientProg/src/: Client.cpp  Client.hxx  ConsoleApplication_ConsoleGame.cpp
ServerProg/: CMakeLists.txt
ServerProg/src/: tcpserver.cpp
